# rotations

./: CMakeLists.txt  CMakePresets.json
include/: quaternions.h  rotation_matrix.h  rotations.h
src/: CMakeLists.txt  quaternions.c  rotation_matrix.c
tests/: CMakeLists.txt  quaternions_test.c  rotation_matrix_test.c  rotations_test.c  unity_test.c
